# Ampel-interface

./: .buildinfo  .coveragerc  .gitignore  README.md  api.html  genindex.html  index.html  mypy.ini  objects.inv  pyproject.toml  renovate.json  requirements.txt  search.html  searchindex.js  setup.py  structure.html
.doctrees/: api.doctree  environment.pickle  index.doctree  structure.doctree
.github/workflows/: ci.yml  docs.yml  lint.yml  main.yml  package.yml  test.yml
.jenkins/: Dockerfile.build  Jenkinsfile
_modules/: index.html
_modules/ampel/abstract/: AbsCustomStateT2Unit.html  AbsPointT2Unit.html  AbsSecretProvider.html  AbsStateT2Unit.html  AbsStockT2Unit.html  AbsT0Unit.html  AbsT1Unit.html  AbsT3ReviewUnit.html  AbsT3Unit.html  AbsTiedCustomStateT2Unit.html  AbsTiedStateT2Unit.html  AbsTiedT2Unit.html
_modules/ampel/alert/: AmpelAlert.html
_modules/ampel/base/: AmpelBaseModel.html  DataUnit.html  LogicalUnit.html
_modules/ampel/config/: AmpelConfig.html
_modules/ampel/content/: Compound.html  DataPoint.html  JournalRecord.html  LogDocument.html  StockDocument.html  T2Document.html  T2Record.html
_modules/ampel/enum/: T2RunState.html  T2SysRunState.html
_modules/ampel/ingest/: CompoundBluePrint.html
_modules/ampel/model/: Secret.html  StateT2Dependency.html  UnitModel.html
_modules/ampel/struct/: JournalAttributes.html  JournalTweak.html  T2BroadUnitResult.html
_modules/ampel/view/: ReadOnlyDict.html  SnapView.html
_sources/: api.rst.txt  structure.rst.txt
_static/: documentation_options.js
ampel/: py.typed  type.py  types.py
ampel/abc/: AmpelABC.py  __init__.py
ampel/abstract/: AbsAmpelLogger.py  AbsApplicable.py  AbsCLIOperation.py  AbsCustomStateT2Unit.py  AbsDataUnit.py  AbsIdMapper.py  AbsPagedT3Unit.py  AbsPointT2Unit.py  AbsSecretProvider.py  AbsStateT2Unit.py  AbsStockT2Unit.py  AbsT0Unit.py  AbsT1CombineUnit.py  AbsT1ComputeUnit.py  AbsT1RetroCombineUnit.py  AbsT1Unit.py  AbsT3PlainUnit.py  AbsT3ReviewUnit.py  AbsT3StageUnit.py  AbsT3Unit.py  AbsT4Unit.py  AbsTiedCustomStateT2Unit.py  AbsTiedPointT2Unit.py  AbsTiedStateT2Unit.py  AbsTiedStockT2Unit.py  AbsTiedT2Unit.py  Secret.py  T3Send.py
ampel/alert/: AmpelAlert.py
ampel/base/: AlternativeAmpelBaseModel.py  AmpelABC.py  AmpelBaseModel.py  AmpelFlexModel.py  AmpelGenericModel.py  AmpelUnit.py  AuxUnitRegister.py  BadConfig.py  DataUnit.py  LogicalUnit.py  __init__.py  decorator.py
ampel/cli/: AmpelArgumentParser.py  AmpelHelpFormatter.py  ArgParserBuilder.py  LoadAllOfAction.py  LoadAnyOfAction.py  LoadJSONAction.py  MaybeIntAction.py  config.py  main.py
ampel/compile/: CompoundBluePrint.py
ampel/config/: AmpelConfig.py  InvalidConfigError.py  OutdatedConfigError.py
ampel/content/: Compound.py  DataPoint.py  EventDocument.py  JournalRecord.py  LogDocument  LogDocument.py  LogRecord.py  MetaActivity.py  MetaRecord.py  SVGDocument.py  SVGRecord.py  StockDocument.py  StockRecord.py  T1Document.py  T2Document.py  T2Record.py  T2SubRecord.py  T3Document.py  T4Document.py
ampel/dataclass/: JournalUpdate.py
ampel/enum/: DocumentCode.py  EventCode.py  JournalActionCode.py  MetaActionCode.py  T2RunState.py  T2SysRunState.py
ampel/ingest/: CompoundBluePrint.py
ampel/log/: AbsAmpelLogger.py
ampel/model/: DPSelection.py  PlotProperties.py  Secret.py  StateT2Dependency.py  StrictGenericModel.py  StrictModel.py  UnitModel.py
ampel/model/operator/: AllOf.py  AnyOf.py  FlatAnyOf.py  OneOf.py
ampel/protocol/: AmpelAlertProtocol.py  LoggerProtocol.py  LoggingHandlerProtocol.py
ampel/secret/: AESecret.py  AmpelVault.py  NamedSecret.py  Secret.py
ampel/struct/: AmpelBuffer.py  DocAttributes.py  JournalAttributes.py  JournalExtra.py  JournalTweak.py  Resource.py  StockAttributes.py  T1CombineResult.py  T2BroadUnitResult.py  T2Dependency.py  T3Store.py  UnitResult.py
ampel/t2/: T2Result.py
ampel/t3/: JournalRecord.py
ampel/util/: bson.py  collections.py  compression.py  debug.py  docstringutils.py  freeze.py  hash.py  json.py  logicschema.py  mappings.py  recursion.py  serialize.py  tag.py
ampel/util/legacy/: json_v06.py
ampel/utils/: Freeze.py  Observatory.py  json.py
ampel/view/: BaseView.py  ReadOnlyDict.py  SnapView.py  T2DocView.py  T3DocView.py  T3Store.py
docs/sphinx/: api.rst  conf.py  index.rst  structure.rst
src/ampel/base/: AmpelAlert.py  Compound.py  LightCurve.py  Observatory.py  PhotoData.py  ScienceRecord.py  TransientView.py
src/ampel/base/abstract/: AbsAlertFilter.py  AbsAlertShaper.py  AbsT2Unit.py  AbsT3Unit.py  AmpelABC.py
src/ampel/base/dataclass/: GlobalInfo.py  JournalUpdate.py
src/ampel/base/dev/: DevAmpelAlert.py
src/ampel/base/flags/: AmpelFlags.py  AmpelMetaFlags.py  PhotoFlags.py  TransientFlags.py
src/ampel/utils/: ZIAlertUtils.py  json.py  json_serialization.py
tests/: test_AbsStateT2Unit.py  test_AmpelABC.py  test_AmpelAlert.py  test_AmpelArgumentParser.py  test_AmpelBaseModel.py  test_AmpelUnit.py  test_AmpelVault.py  test_ReadOnlyDict.py  test_SnapView.py  test_UnitModel.py  test_collections.py  test_mappings.py  test_views.py
