[tool.poetry]
name = "ampel-interface"
version = "0.9.1a0"
description = "Base classes for the Ampel analysis platform"
authors = ["Valery Brinnel"]
maintainers = ["Jakob van Santen <jakob.van.santen@desy.de>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://ampelproject.github.io"
repository = "https://github.com/AmpelProject/Ampel-interface"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
packages = [{include = "ampel"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
xxhash = "^3.0.0"
PyYAML = "^6.0.0"
ujson = "^5.1.0"
Sphinx = {version = "^7.0.0", optional = true}
sphinx-autodoc-typehints = {version = "^1.11.1", optional = true}
tomlkit = {version = "^0.12.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
mypy = "^1.7.1"
types-PyYAML = "^6.0.12"
types-setuptools = "^65.3.0"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-autodoc-typehints", "tomlkit"]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=40.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
