[tool.poetry]
name = "ampel-interface"
version = "0.10.4.post1"
description = "Base classes for the Ampel analysis platform"
authors = ["Valery Brinnel"]
maintainers = ["Jakob van Santen <jakob.van.santen@desy.de>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://ampelproject.github.io"
repository = "https://github.com/AmpelProject/Ampel-interface"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
packages = [{include = "ampel"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10"
xxhash = "^3.0.0"
PyYAML = "^6.0.0"
ujson = "^5.1.0"
platformdirs = "^4.2.2"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
mypy = "^1.11.2"
types-PyYAML = "^6.0.12"
types-setuptools = "^65.3.0"

[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.12.0"
pymongo = "^4.7.3"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=40.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = [
    "error",
]

[tool.mypy]
namespace_packages = true
show_error_codes = true
check_untyped_defs = true
disallow_untyped_calls = true
warn_unused_ignores = true
enable_error_code = "ignore-without-code"
plugins = [
    "pydantic.mypy"
]
packages = [
    "ampel"
]
exclude = [
    "ampel/base/AlternativeAmpelBaseModel.py"
]

[tool.pydantic-mypy]
init_typed = true

[[tool.mypy.overrides]]
module = "ampel.abstract.*"
disable_error_code = "empty-body"

[tool.ruff]
target-version = "py310"
exclude = [
    "ampel/base/AlternativeAmpelBaseModel.py"
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "UP",
    "B",
    "DTZ",
    "T20",
    "PT",
    "RET",
    "SLF",
    "SIM",
    # "ARG", # sometimes your arguments have to conform to an interface
    # "ERA", # seems to prohibit all comments, that's bad
    "PL",
    "PERF",
    "RUF",
]
ignore = [
    "E741", # ambiguous variable name
    "UP009", # UTF-8 encoding declaration is unnecessary
    "PLR09", # too many (arguments|branches)
    "PLR2004", # Magic value used in comparison
    "RUF018", # assignment expressions in asserts are fine
    "RUF023", # unsorted __slots__ are fine
]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true
